--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "2.3.1",
   "description": "",
   "main": "index.js",
+  "bin": {"chatgpt-telegram-bot": "dist/index.js"},
   "type": "module",
   "scripts": {
     "build": "tsc --build",
+    "install": "tsc --build",
     "build:debug": "tsc --build && tsc --sourceMap",
     "dev": "tsc-watch --onSuccess \"node --experimental-loader=extensionless dist/index.js\"",
     "start": "node --experimental-loader=extensionless dist/index.js",
@@ -55,6 +57,15 @@
     "node-fetch": "^3.3.0",
     "node-telegram-bot-api": "^0.60.0",
     "promise-queue": "^2.2.5",
-    "telegramify-markdown": "^1.0.6"
+    "telegramify-markdown": "^1.0.6",
+
+    "@types/config": "^3.3.0",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.14.4",
+    "@types/node-telegram-bot-api": "^0.57.7",
+    "@types/promise-queue": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "typescript": "^4.9.5"
   }
 }
